update: Update Swagger file and Auth controller
Fix: fix bug
