# apps/auth/src/users/users.controller.ts
@@ -9,7 +9,7 @@ import { JwtAuthGuard } from '../guards/jaw-auth.guard';
 export class UsersController {
   constructor(private readonly usersService: UsersService) {}
 
-  @Post()
+  @Post('register')
   async createUser(@Body() createUserDto: CreateUserDto) {
     return this.usersService.create(createUserDto);
   }
